--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
           </div>
         <h1> Kofi Omari's Portfolio</h1>
         <div start="Intro">
-            <img src = "C:\Users\hp\Pictures\mypic.jpg"/>
+            <img src = "mypic.jpg"/>
             <p> Kofi Omari Asante is a third year student studying Computer Science at Ashesi University in Ghana. He is 19 years of age and stands at a height of 6 feet and 7 inches.
                 He plays Basketball for the Tusk Foundation and is also a member of the Ashesi Basketball team. He is a Christian and Attends Church at the Church of Pentecost. 
                 He completed senior High School at the Pope John Senior High School and Minor Seminary.
